--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "papaparse": "^4.6.2",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-anchor-link-smooth-scroll": "^1.0.11",
     "react-bootstrap": "^0.32.4",
     "react-bs-datatable": "^1.2.3",
     "react-chartjs-2": "^2.7.4",
