--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "students-academic-performance",
   "version": "0.1.0",
+  "engines": {
+    "node": "10.15.3",
+    "npm": "6.4.1"
+  },
   "private": true,
   "dependencies": {
     "chart.js": "^2.7.3",
